# html_generator

./: .gitignore  README.md  index.html  index_template.html  pyproject.toml
outputs/: aaa1.0_bbb1.0.html  aaa1.0_bbb2.0.html  aaa2.0_bbb1.0.html  aaa2.0_bbb2.0.html
outputs/tmp/: aaa3.0_bbb1.0.html
src/: generate_index_html.py
src/utils/: prettify_html.py
